Fixed contrast.

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -25,6 +25,7 @@ button {
 
 .subtitle {
   margin-top: 0 !important;
+  color: #b8bebf !important;
 }
 
 p {
